# movie-tracker

./: README.md  pyproject.toml
movie_tracker/: __init__.py  auth.py
movie_tracker/templates/: base.html  index.html
movie_tracker/templates/auth/: register.html
tests/: conftest.py  test_auth.py  test_factory.py
